Fixed wrapper spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -469,7 +469,7 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 6em 0em 4em 0em;
+		padding: 2em 0em 3em 0em;
 	}
 
 		.wrapper.style1 {
